fixing alignment of text in tall button

--- a/css/style.css
+++ b/css/style.css
@@ -15430,7 +15430,7 @@ a.scrolltop {
 }
 .csc-btn.btn--pill-tall {
   border-radius: 50px;
-  padding-top: 12px;
+  padding-top: 4px;
 }
 .csc-btn.btn--circle {
   border-radius: 50%;
