--- a/scss/csc-elements.scss
+++ b/scss/csc-elements.scss
@@ -441,7 +441,7 @@ a.scrolltop {
 
   &.btn--pill-tall {
     border-radius: 50px;
-    padding-top: 12px;
+    padding-top: 4px;
   }
 
   &.btn--circle {
